--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 bcrypt==3.2.0
+certifi==2020.12.5
 cffi==1.14.4
+chardet==4.0.0
 click==7.1.2
 dnspython==2.0.0
 email-validator==1.1.2
@@ -14,7 +16,10 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 Pillow==8.0.1
 pycparser==2.20
+python-dotenv==0.15.0
+requests==2.25.1
 six==1.15.0
 SQLAlchemy==1.3.22
+urllib3==1.26.2
 Werkzeug==1.0.1
 WTForms==2.3.3
