--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+psycopg2==2.8.6
 pycparser==2.20
 python-dotenv==0.15.0
 requests==2.25.1
